@@ -1,6 +1,7 @@
 -- SPDX-License-Identifier: GPL-3.0-or-later
 
 local cqerrno = require('cqueues.errno')
+local ffi = require('ffi')
 local kluautil = {}
 
 -- Get length of table
@@ -17,6 +18,21 @@ function kluautil.kr_table_len(t)
 end
 
 -- Fetch over HTTPS
+ffi.cdef([[
+	typedef struct __dirstream DIR;
+	struct dirent {
+		unsigned long int	d_ino;
+		long int		d_off;
+		unsigned short		d_reclen;
+		unsigned char		d_type;
+		char			d_name[256];
+	};
+	DIR *opendir(const char *name);
+	struct dirent *readdir(DIR *dirp);
+	int closedir(DIR *dirp);
+	char *strerror(int errnum);
+]])
+
 function kluautil.kr_https_fetch(url, out_file, ca_file)
 	local http_ok, http_request = pcall(require, 'http.request')
 	local httptls_ok, http_tls = pcall(require, 'http.tls')
@@ -62,9 +78,31 @@ function kluautil.kr_https_fetch(url, out_file, ca_file)
 		return nil, errmsg
 	end
 
-	out_file:seek("set", 0)
+	out_file:seek('set', 0)
 
 	return true
+end
+
+-- List directory
+function kluautil.list_dir (path)
+	local results = {}
+	local dir = ffi.C.opendir(path)
+	if dir == nil then
+		return results
+	end
+
+	local entry = ffi.C.readdir(dir)
+	while entry ~= nil do
+		local entry_name = ffi.string(entry.d_name)
+		if entry_name ~= '.' and entry_name ~= '..' then
+			table.insert(results, entry_name)
+		end
+		entry = ffi.C.readdir(dir)
+	end
+
+	ffi.C.closedir(dir)
+
+	return results
 end
 
 return kluautil
