@@ -19,6 +19,7 @@ Bugfixes
 --------
 - avoid an assert() error in stash_rrset() (!1072)
 - fix emergency cache locking bug introduced in 5.1.3 (!1078)
+- migrate map() command to control sockets; fix systemd integration (!1000)
 
 Incompatible changes
 --------------------
